Fix footer layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .todoapp {
-	margin-bottom: 40px; 
+	margin-bottom: 40px;
 }
 
 .todoapp h1 {
@@ -215,6 +215,7 @@
 	height: 20px;
 	text-align: center;
 	border-top: 1px solid #e6e6e6;
+	position: relative;
 }
 
 .footer:before {
@@ -291,4 +292,25 @@
 
 .info a:hover {
 	text-decoration: underline;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	.toggle-all,
+	.todo-list li .toggle {
+		background: none;
+	}
+
+	.todo-list li .toggle {
+		height: 40px;
+	}
+}
+
+@media (max-width: 430px) {
+	.footer {
+		height: 50px;
+	}
+
+	.filters {
+		bottom: 10px;
+	}
 }
